--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -27,14 +27,14 @@ The state serialization is then defined as the dictionary built from the amalgam
       }{
         \tup{\rh¬headerhash, \rh¬accoutlogsuperpeak, \rh¬stateroot, \rh¬reportedpackagehashes} \orderedin \recenthistory
       }}},
-      \mmrencode{\beefybelt}
+      \mmrencode{\accoutbelt}
     } \;, \\
     &&C(4) &\mapsto \encode{
       \pendingset,
       \epochroot,
       \abracegroupboth{
-        0\ &\when \sealtickets \in \sequence[\epochlen]{\safroleticket}\\
-        1\ &\when \sealtickets \in \sequence[\epochlen]{\bskey}\\
+        0\ &\when \sealtickets \in \sequence[\Cepochlen]{\safroleticket}\\
+        1\ &\when \sealtickets \in \sequence[\Cepochlen]{\bskey}\\
       },
       \sealtickets,
       \var{\ticketaccumulator}
