--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -1,14 +1,13 @@
-\newcommand*{\srmap}{P}
-\newcommand*{\opers}{O}
-\newcommand*{\servouts}{B}
-\newcommand*{\gasused}{U}
-\newcommand*{\fnprovide}{P}
-\newcommand*{\accumulatedcup}{\overbrace{\accumulated}}
-\newcommand*{\deferredtransfers}{\mathbf{t}}
-\newcommand*{\numberofitemsaccumulated}{n}
-\newcommand*{\servicegasused}{\mathbf{u}}
+\newcommand*{\local¬fnsrmap}{P}
+\newcommand*{\local¬fnservouts}{B}
+\newcommand*{\local¬fngasused}{U}
+\newcommand*{\local¬fnprovide}{P}
+\newcommand*{\local¬deferredtransfers}{\mathbf{t}}
+\newcommand*{\local¬numberofitemsaccumulated}{n}
+\newcommand*{\local¬servicegasused}{\mathbf{u}}
 
-\section{Accumulation}\label{sec:accumulation}
+\section{Accumulation}
+\label{sec:accumulation}
 
 Accumulation may be defined as some function whose arguments are $\justbecameavailable$ and $\accounts$ together with selected portions of (at times partially transitioned) state and which yields the posterior service state $\accountspostpreimage$ together with additional state elements $\stagingset'$, $\authqueue'$ and $\privileges'$.
 
@@ -24,13 +23,15 @@ The proposition of accumulation is in fact quite simple: we merely wish to execu
 
 Accumulation of a work-report is deferred in the case that it has a not-yet-fulfilled dependency and is cancelled entirely in the case of an invalid dependency. Dependencies are specified as work-package hashes and in order to know which work-packages have been accumulated already, we maintain a history of what has been accumulated. This history, $\accumulated$, is sufficiently large for an epoch worth of work-reports. Formally:
 \begin{align}
-  \accumulated &\in \sequence[\epochlen]{\protoset{\hash}} \\
+  \label{eq:accumulatedspec}
+  \accumulated &\in \sequence[\Cepochlen]{\protoset{\hash}} \\
   \accumulatedcup &\equiv \bigcup_{x \in \accumulated}(x)
 \end{align}
 
 We also maintain knowledge of ready (\ie available and/or audited) but not-yet-accumulated work-reports in the state item $\ready$. Each of these were made available at most one epoch ago but have or had unfulfilled dependencies. Alongside the work-report itself, we retain its unaccumulated dependencies, a set of work-package hashes. Formally:
 \begin{align}
-  \ready &\in \sequence[\epochlen]{\sequence{\tuple{\workreport, \protoset{\hash}}}}
+  \label{eq:readyspec}
+  \ready &\in \sequence[\Cepochlen]{\sequence{\tuple{\workreport, \protoset{\hash}}}}
 \end{align}
 
 The newly available work-reports, $\justbecameavailable$, are partitioned into two sequences based on the condition of having zero prerequisite work-reports. Those meeting the condition, $\justbecameavailable^!$, are accumulated immediately. Those not, $\justbecameavailable^Q$, are for queued execution. Formally:
@@ -65,15 +66,15 @@ We further define the accumulation priority queue function $Q$, which provides t
     &\sequence{\tuple{\workreport, \protoset{\hash}}} \to \sequence{\workreport} \\
     &\mathbf{r} \mapsto \begin{cases}
       \sq{} &\when \mathbf{g} = \sq{} \\
-      \mathbf{g} \concat Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
+      \mathbf{g} \concat Q(E(\mathbf{r}, \local¬fnsrmap(\mathbf{g})))\!\!\!\! &\otherwise \\
       \multicolumn{2}{l}{\,\where \mathbf{g} = \sq{\build{w}{\tup{w, \emset} \orderedin \mathbf{r}}}}
     \end{cases}
   }
 \end{equation}
 
-Finally, we define the mapping function $\srmap$ which extracts the corresponding work-package hashes from a set of work-reports:
+Finally, we define the mapping function $\local¬fnsrmap$ which extracts the corresponding work-package hashes from a set of work-reports:
 \begin{equation}
-  \srmap\colon\abracegroup{
+  \local¬fnsrmap\colon\abracegroup{
     \protoset{\workreport} &\to \protoset{\hash}\\
     \mathbf{w} &\mapsto \set{
       \build{(w_\wr¬avspec)_\as¬packagehash}{w \in \mathbf{w}}
@@ -83,12 +84,13 @@ Finally, we define the mapping function $\srmap$ which extracts the correspondin
 
 We may now define the sequence of accumulatable work-reports in this block as $\justbecameavailable^*$:
 \begin{align}
-  \using m &= \H_\¬timeslot \bmod \epochlen\\
+  \using m &= \H_\¬timeslot \bmod \Cepochlen\\
   \justbecameavailable^* &\equiv \justbecameavailable^! \concat Q(\mathbf{q}) \\
-  \quad\where \mathbf{q} &= E(\concatall{\ready\interval{m}{}} \concat \concatall{\ready\interval{}{m}} \concat \justbecameavailable^Q, \srmap(\justbecameavailable^!))
+  \quad\where \mathbf{q} &= E(\concatall{\ready\interval{m}{}} \concat \concatall{\ready\interval{}{m}} \concat \justbecameavailable^Q, \local¬fnsrmap(\justbecameavailable^!))
 \end{align}
 
 \subsection{Execution}
+\label{sec:accumulationexecution}
 
 We work with a limited amount of gas per block and therefore may not be able to process all items in $\justbecameavailable^*$ in a single block. There are two slightly antagonistic factors allowing us to optimize the amount of work-items, and thus work-reports, accumulated in a single block:
 
@@ -105,36 +107,38 @@ Our formalisms begin by defining $\partialstate$ as a characterization of (\ie v
   \label{eq:partialstate}
   \partialstate \equiv \tuple{\begin{aligned}
     &\isa{\ps¬accounts}{\dictionary{\serviceid}{\serviceaccount}} \,,\;
-    \isa{\ps¬stagingset}{\sequence[\valcount]{\valkey}} \,,\;
-    \isa{\ps¬authqueue}{\sequence[_\corecount]{\sequence[\mathsf{Q}]{\hash}}} \,,\\
+    \isa{\ps¬stagingset}{\sequence[\Cvalcount]{\valkey}} \,,\;
+    \isa{\ps¬authqueue}{\sequence[\Ccorecount]{\sequence[\Cauthqueuesize]{\hash}}} \,,\\
     &\isa{\ps¬manager}{\serviceid} \,,\;
-    \isa{\ps¬assigners}{\sequence[\corecount]{\serviceid}} \,,\;
+    \isa{\ps¬assigners}{\sequence[\Ccorecount]{\serviceid}} \,,\;
     \isa{\ps¬delegator}{\serviceid} \,,\;
     \isa{\ps¬alwaysaccers}{\dictionary{\serviceid}{\gas}}
   \end{aligned}}
 \end{equation}
 
-We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $\dx¬memo$ of $\mathsf{W}_T = 128$ octets, together with the service index of the sender $\dx¬source$, the service index of the receiver $\dx¬dest$, the balance to be transferred $\dx¬amount$ and the gas limit $\dx¬gas$ for the transfer. Formally:
+We denote the set characterizing a \emph{deferred transfer} as $\defxfer$, noting that a transfer includes a memo component $\dx¬memo$ of $\Cmemosize = 128$ octets, together with the service index of the sender $\dx¬source$, the service index of the receiver $\dx¬dest$, the balance to be transferred $\dx¬amount$ and the gas limit $\dx¬gas$ for the transfer. Formally:
 \begin{align}
+  \label{eq:defxfer}
   \defxfer \equiv \tuple{
     \isa{\dx¬source}{\serviceid} ,
     \isa{\dx¬dest}{\serviceid} ,
     \isa{\dx¬amount}{\balance} ,
-    \isa{\dx¬memo}{\blob[\mathsf{W}_T]} ,
+    \isa{\dx¬memo}{\blob[\Cmemosize]} ,
     \isa{\dx¬gas}{\gas}
   }
 \end{align}
 
-Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\servouts$:
+Finally, we denote the set of service/hash pairs, utilized as a service-indexed commitment to the accumulation output, as $\local¬fnservouts$:
 \begin{equation}
-  \servouts \equiv \protoset{\tuple{\serviceid, \hash}} \qquad
-  \gasused \equiv \sequence{\tuple{\serviceid, \gas}}
+  \local¬fnservouts \equiv \protoset{\tuple{\serviceid, \hash}} \qquad
+  \local¬fngasused \equiv \sequence{\tuple{\serviceid, \gas}}
 \end{equation}
 
 We define the outer accumulation function $\accseq$ which transforms a gas-limit, a sequence of work-reports, an initial partial-state and a dictionary of services enjoying free accumulation, into a tuple of the number of work-results accumulated, a posterior state-context, the resultant deferred-transfers and accumulation-output pairings:
 \begin{equation}
+  \label{eq:accseq}
   \accseq\colon\abracegroup{
-    &\tuple{\gas, \sequence{\workreport}, \partialstate, \dictionary{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \servouts, \gasused} \\
+    &\tuple{\gas, \sequence{\workreport}, \partialstate, \dictionary{\serviceid}{\gas}} \to \tuple{\N, \partialstate, \defxfers, \local¬fnservouts, \local¬fngasused} \\
     &\tup{g, \mathbf{w}, \psX, \mathbf{f}} \!\mapsto\! \begin{cases}
       \tup{0, \psX, \sq{}, \emset, \sq{}} &
         \when i = 0 \\
@@ -157,8 +161,9 @@ We define the outer accumulation function $\accseq$ which transforms a gas-limit
 
 We come to define the parallelized accumulation function $\accpar$ which, with the help of the single-service accumulation function $\accone$, transforms an initial state-context, together with a sequence of work-reports and a dictionary of privileged always-accumulate services, into a tuple of the total gas utilized in \textsc{pvm} execution, a posterior state-context and the resultant accumulation-output pairings and deferred-transfers:
 \begin{equation}
+  \label{eq:accpar}
   \accpar\colon\abracegroup[\;]{\begin{aligned}
-    &\tuple{\partialstate, \sequence{\workreport}, \dictionary{\serviceid}{\gas}} \to \tuple{\partialstate, \defxfers, \servouts, \gasused} \\
+    &\tuple{\partialstate, \sequence{\workreport}, \dictionary{\serviceid}{\gas}} \to \tuple{\partialstate, \defxfers, \local¬fnservouts, \local¬fngasused} \\
     &\tup{\psX, \mathbf{w}, \mathbf{f}} \mapsto \tup{
       \tup{
         \local¬accounts', \local¬stagingset', \local¬authqueue', \local¬manager', \local¬assigners', \local¬delegator', \local¬alwaysaccers'
@@ -188,7 +193,7 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
         }{
           s \orderedin \mathbf{s}
         }} \\
-      \local¬accounts' &= \fnprovide(
+      \local¬accounts' &= \local¬fnprovide(
         (\ps¬accounts \cup \mathbf{n}) \setminus \mathbf{m},
         \bigcup_{s \in \mathbf{s}} \accone(\psX, \mathbf{w}, \mathbf{f}, s)_\ao¬provisions
       ) \\
@@ -225,9 +230,9 @@ We come to define the parallelized accumulation function $\accpar$ which, with t
   \end{aligned}}
 \end{equation}
 
-And $\fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
+And $\local¬fnprovide$ is the preimage integration function, which transforms a dictionary of service states and a set of service/hash pairs into a new dictionary of service states. Preimage provisions into services which no longer exist or whose relevant request is dropped are disregarded:
 \begin{equation}
-  \fnprovide\colon\abracegroup{
+  \local¬fnprovide\colon\abracegroup{
     &\tuple{\dictionary{\serviceid}{\serviceaccount}, \protoset{\tuple{\serviceid, \blob}}} \to \dictionary{\serviceid}{\serviceaccount} \\
     &\tup{\mathbf{d}, \mathbf{p}} \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
@@ -266,7 +271,8 @@ The single-service accumulation function, $\accone$, transforms an initial state
   }
 \end{align}
 \begin{align}
-    &\accone \colon \abracegroup[\;]{
+  \label{eq:accone}
+  &\accone \colon \abracegroup[\;]{
     &\begin{aligned}
       \tuple{\begin{aligned}
         &\partialstate, \sequence{\workreport},\\
@@ -302,13 +308,11 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 \subsection{Deferred Transfers and State Integration}
 
-\newcommand*{\accoutseq}{\mathbf{c}}
-
 Given the result of the top-level $\accseq$, we may define the posterior state $\privileges'$, $\authqueue'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
   &\using g = \max\left(
-    \mathsf{G}_T,
-    \mathsf{G}_A \cdot \corecount + \textstyle \sum_{x \in \values{\alwaysaccers}}(x)
+    \Cblockaccgas,
+    \Creportaccgas \cdot \Ccorecount + \textstyle \sum_{x \in \values{\alwaysaccers}}(x)
   \right)\\
   &\also \psX = \tup{
     \is{\ps¬accounts}{\accountspre},
@@ -320,9 +324,11 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
     \is{\ps¬alwaysaccers}{\alwaysaccers}
   }
   \!\!\!\!\!\\
+  \label{eq:finalstateaccumulation}
   &\tup{
-    \numberofitemsaccumulated, \psX', \deferredtransfers, \lastaccout', \servicegasused
+    \local¬numberofitemsaccumulated, \psX', \local¬deferredtransfers, \lastaccout', \local¬servicegasused
   } \equiv \accseq(g, \justbecameavailable^*, \psX, \alwaysaccers) \\
+  \label{eq:accountspostaccdef}
   &\tup{
     \is\ps¬accounts{\accountspostacc},
     \is\ps¬stagingset{\stagingset'},
@@ -335,11 +341,13 @@ Given the result of the top-level $\accseq$, we may define the posterior state $
   \!\!\!\!\!
 \end{align}
 
-From this formulation, we also receive $\deferredtransfers$, the grand sequence of deferred transfers, together with $\numberofitemsaccumulated$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
+From this formulation, we also receive $\local¬deferredtransfers$, the grand sequence of deferred transfers, together with $\local¬numberofitemsaccumulated$, the total number of work-items accumulated and $\mathbf{u}$, the gas used in the accumulation process for each service. Each of these terms are used shortly.
 
 We compose $\accumulationstatistics$, our accumulation statistics, which is a mapping from the service indices which were accumulated to the amount of gas used throughout accumulation and the number of work-items accumulated. Formally:
 \begin{align}
+  \label{eq:accumulationstatisticsspec}
   &\accumulationstatistics \in \dictionary{\serviceid}{\tuple{\gas, \N}} \\
+  \label{eq:accumulationstatisticsdef}
   &\textstyle \accumulationstatistics \equiv \set{\build{
     \kv{s}{
       \tup{\sum_{\tup{s, u} \in \mathbf{u}}(u), \len{N(s)}}
@@ -357,13 +365,13 @@ We compose $\accumulationstatistics$, our accumulation statistics, which is a ma
 
 \newcommand*{\selectxfers}{X}
 
-We have denoted the sequence of implied transfers as $\deferredtransfers$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from those implied which target said service. It is ordered primarily according to the source service index and secondarily their order within $\deferredtransfers$. Formally:
+We have denoted the sequence of implied transfers as $\local¬deferredtransfers$, ordered internally according to the source service's execution. We define a selection function $\selectxfers$, which maps a desired destination service index into the sequence of transfers from those implied which target said service. It is ordered primarily according to the source service index and secondarily their order within $\local¬deferredtransfers$. Formally:
 \begin{equation}
   \selectxfers\colon \abracegroup[\;]{
     \serviceid &\to \defxfers \\
     d &\mapsto \sq{\build{t}{
       s \orderedin \serviceid,\ 
-      t \orderedin \deferredtransfers,\ 
+      t \orderedin \local¬deferredtransfers,\ 
       t_\dx¬source = s,\ 
       t_\dx¬dest = d
     }}
@@ -378,6 +386,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
   }{
     \kv{s}{a} \in \accountspostacc
   }} \\
+  \label{eq:accountspostxferdef}
   \accountspostxfer &\equiv \set{ \build{ \kv{s}{a'} }{ \kv{s}{\tup{a, u}} \in \deferredeffects }} \\
   &\where a' = \begin{cases}
     a \exc a'_\sa¬lastacc = \thetime' &\when s \in \keys{\accumulationstatistics} \\
@@ -402,12 +411,12 @@ Note that $\Psi_T$ is defined in appendix \ref{sec:ontransferinvocation} such th
 
 We define the final state of the ready queue and the accumulated map by integrating those work-reports which were accumulated in this block and shifting any from the prior state with the oldest such items being dropped entirely:
 \begin{align}
-  \accumulated'_{\epochlen - 1} &= \srmap(\justbecameavailable^*\sub{\dots n}) \\
-  \forall i \in \Nmax{\epochlen - 1}: \accumulated'\sub{i} &\equiv \accumulated\sub{i + 1} \\
-  \forall i \in \N_\epochlen : \cyclic{\ready'}\sub{m - i} &\equiv \begin{cases}
-    E(\justbecameavailable^Q, \accumulated'\sub{\epochlen - 1}) &\when i = 0 \\
+  \accumulated'_{\Cepochlen - 1} &= \local¬fnsrmap(\justbecameavailable^*\sub{\dots n}) \\
+  \forall i \in \Nmax{\Cepochlen - 1}: \accumulated'\sub{i} &\equiv \accumulated\sub{i + 1} \\
+  \forall i \in \N_\Cepochlen : \cyclic{\ready'}\sub{m - i} &\equiv \begin{cases}
+    E(\justbecameavailable^Q, \accumulated'\sub{\Cepochlen - 1}) &\when i = 0 \\
     \sq{} &\when 1 \le i < \thetime' - \thetime \\
-    E(\cyclic{\ready}\sub{m - i}, \accumulated'\sub{\epochlen - 1}) &\when i \ge \thetime' - \thetime
+    E(\cyclic{\ready}\sub{m - i}, \accumulated'\sub{\Cepochlen - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
   \!\!\!\!
 \end{align}
