--- a/text/authorization.tex
+++ b/text/authorization.tex
@@ -13,16 +13,17 @@ Authorizers are identified as the hash of their \textsc{pvm} code concatenated w
 \subsection{Pool and Queue}
 
 We define the set of authorizers allowable for a particular core $\¬core$ as the \emph{authorizer pool} $\authpool[\¬core]$. To maintain this value, a further portion of state is tracked for each core: the core's current \emph{authorizer queue} $\authqueue[\¬core]$, from which we draw values to fill the pool. Formally:
-\begin{equation}\label{eq:authstatecomposition}
-  \authpool \in \sequence[\corecount]{\sequence[:\mathsf{O}]{\hash}}\ , \qquad
-  \authqueue \in \sequence[\corecount]{\sequence[\mathsf{Q}]{\hash}}
+\begin{equation}
+  \label{eq:authstatecomposition}
+  \authpool \in \sequence[\Ccorecount]{\sequence[:\Cauthpoolsize]{\hash}}\ , \qquad
+  \authqueue \in \sequence[\Ccorecount]{\sequence[\Cauthqueuesize]{\hash}}
 \end{equation}
 
 Note: The portion of state $\authqueue$ may be altered only through an exogenous call made from the accumulate logic of an appropriately privileged service.
 
 The state transition of a block involves placing a new authorization into the pool from the queue:
 \begin{align}
-  &\forall \¬core \in \coreindex : \authpool'\subb{\¬core} \equiv {\overleftarrow{F(\¬core) \append \cyclic{\authqueue'\subb{\¬core}\subb{\H_\¬timeslot}}}}^{\mathsf{O}} \\
+  &\forall \¬core \in \coreindex : \authpool'\subb{\¬core} \equiv {\overleftarrow{F(\¬core) \append \cyclic{\authqueue'\subb{\¬core}\subb{\H_\¬timeslot}}}}^{\Cauthpoolsize} \\
   &F(\¬core) \equiv \begin{cases} \authpool[\¬core] \seqminusl \set{(g_\xg¬workreport)_\wr¬authorizer} &\when \exists g \in \xtguarantees : (g_\xg¬workreport)_\¬core = \¬core \\ \authpool[\¬core] & \otherwise \end{cases}
 \end{align}
 
