--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -32,9 +32,9 @@
     \item[$\blskey$] The set of \textsc{bls} public keys. A subset of $\blob[144]$. See section \ref{sec:signing}.
     \item[$\ringroot$] The set of Bandersnatch ring roots. A subset of $\blob[144]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
-  \item[$\workcontext$] The set of work-$\mathbb{C}$ontexts. \emph{Not used as the set of complex numbers.}
-  \item[$\workdigest$] The set of work-$\mathbb{D}$igests.
-  \item[$\workerror$] The set of work execution $\mathbb{E}$rrors.
+  \item[$\workcontext$] The set of work-$\mathbb{C}$ontexts. See equation \ref{eq:workcontext}. \emph{Not used as the set of complex numbers.}
+  \item[$\workdigest$] The set of work-$\mathbb{D}$igests. See equation \ref{eq:workdigest}.
+  \item[$\workerror$] The set of work execution $\mathbb{E}$rrors. See equation \ref{eq:workerror}.
   \item[$\pvmguest$] The set representing the state of a $\mathbb{G}$uest \textsc{pvm} instance. See equation \ref{eq:pvmguest}.
   \item[$\hash$] The set of 32-octet cryptographic values, equivalent to $\blob[32]$. Often a $\mathbb{H}$ash function's result. See section \ref{sec:cryptography}.
   \begin{description}
@@ -42,12 +42,12 @@
     \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob[32]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
   \item[$\operandtuple$] The $\mathbb{I}$nformation concerning a single work-item once prepared as an operand for the accumulation function. See equation \ref{eq:operandtuple}.
-  \item[$\segment$] The set of data segments, equivalent to $\blob[\mathsf{W}_G]$. See equation \ref{eq:segment}.
+  \item[$\segment$] The set of data segments, equivalent to $\blob[\Csegmentsize]$. See equation \ref{eq:segment}.
   \item[$\valkey$] The set of validator $\mathbb{K}$ey-sets. See equation \ref{eq:validatorkeys}.
-  \item[$\implications$] The set representing implications of accumulation. See equation \ref{eq:implication}.
+  \item[$\implications$] The set representing implications of accumulation. See equation \ref{eq:implications}.
   \item[$\ram$] The set of \textsc{pvm} $\mathbb{M}$emory (\textsc{ram}) states. See equation \ref{eq:pvmmemory}.
   \item[$\workpackage$] The set of work-$\mathbb{P}$ackages. See equation \ref{eq:workpackage}.
-  \item[$\workreport$] The set of work-$\mathbb{R}$eports. \emph{Note used for the set of real numbers.}
+  \item[$\workreport$] The set of work-$\mathbb{R}$eports. See equation \ref{eq:workreport}. \emph{Note used for the set of real numbers.}
   \item[$\partialstate$] The set representating a portion of overall $\mathbb{S}$tate, used during accumulation. See equation \ref{eq:partialstate}.
   \item[$\safroleticket$] The set of seal-key $\mathbb{T}$ickets. See equation \ref{eq:ticket}.
   \item[$\readable{\memory}$] The set of $\mathbb{V}$alidly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
@@ -56,38 +56,38 @@
   \item[$\bssignature{k}{c}{m}$] The set of $\mathbb{V}$alid Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\blob[64]$. See section \ref{sec:cryptography}.
   \item[$\bsringproof{r}{c}{m}$] The set of $\mathbb{V}$alid Bandersnatch Ring\textsc{vrf} proofs of the root $r$, context $c$ and message $m$. See section \ref{sec:cryptography}.
   \item[$\workitem$] The set of $\mathbb{W}$ork items. See equation \ref{eq:workitem}.
-  \item[$\defxfer$] The set of deferred transfers.
-  \item[$\avspec$] The set of availability specifications.
+  \item[$\defxfer$] The set of deferred transfers. See equation \ref{eq:defxfer}.
+  \item[$\avspec$] The set of availability specifications. See equation \ref{eq:avspec}.
 \end{description}
 
 \subsection{Functions}
 
 \begin{description}
-%  \item[$\Gamma$] Unused. %	Γ
-  \item[$\accumulate$] The accumulation function; certain subscripts are used to denote helper functions: %	Δ
+%  \item[$\Gamma$] Unused.
+  \item[$\accumulate$] The accumulation functions (see section \ref{sec:accumulationexecution}): 
   \begin{description}
-    \item[$\accone$] The single-step accumulation function.
-    \item[$\accpar$] The parallel accumulation function.
-    \item[$\accseq$] The full sequential accumulation function.
+    \item[$\accone$] The single-step accumulation function. See equation \ref{eq:accone}.
+    \item[$\accpar$] The parallel accumulation function. See equation \ref{eq:accpar}.
+    \item[$\accseq$] The full sequential accumulation function. See equation \ref{eq:accseq}.
   \end{description}
-%  \item[$\gascounter$] Unused. %	Θ
-%  \item[$\Pi$] Unused. %	Π
-  \item[$\histlookup$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
-  \item[$\computereport$] The work-report computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
-  \item[$\transitionstate$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
-%  \item[$\Sigma$] Unused. %	Σ
-  \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
-  \item[$\Psi$] The whole-program \textsc{pvm} machine state-transition function. See equation \ref{sec:virtualmachine}. %	Ψ
+%  \item[$\gascounter$] Unused.
+%  \item[$\Pi$] Unused.
+  \item[$\histlookup$] The historical lookup function. See equation \ref{eq:historicallookup}.
+  \item[$\computereport$] The work-report computation function. See equation \ref{eq:workdigestfunction}.
+  \item[$\transitionstate$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}.
+%  \item[$\Sigma$] Unused.
+  \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}.
+  \item[$\Psi$] The whole-program \textsc{pvm} machine state-transition function. See equation \ref{sec:virtualmachine}.
   \begin{description}
-    \item[$\Psi_1$] The single-step (\textsc{pvm}) machine state-transition function. See appendix \ref{sec:virtualmachine}. %	Ψ
+    \item[$\Psi_1$] The single-step (\textsc{pvm}) machine state-transition function. See appendix \ref{sec:virtualmachine}.
     \item[$\Psi_A$] The Accumulate \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
-    \item[$\Psi_H$] The host-function invocation (\textsc{pvm}) with host-function marshalling. See appendix \ref{sec:virtualmachine}. %	Ψ
+    \item[$\Psi_H$] The host-function invocation (\textsc{pvm}) with host-function marshalling. See appendix \ref{sec:virtualmachine}.
     \item[$\Psi_I$] The Is-Authorized \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
-    \item[$\Psi_M$] The marshalling whole-program \textsc{pvm} machine state-transition function. See appendix \ref{sec:virtualmachine}. %	Ψ
+    \item[$\Psi_M$] The marshalling whole-program \textsc{pvm} machine state-transition function. See appendix \ref{sec:virtualmachine}.
     \item[$\Psi_R$] The Refine \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
     \item[$\Psi_T$] The On-Transfer \textsc{pvm} invocation function. See appendix \ref{sec:virtualmachineinvocations}.
   \end{description}
-  \item[$\Omega$] Virtual machine host-call functions. See appendix \ref{sec:virtualmachineinvocations}. %	Ω
+  \item[$\Omega$] Virtual machine host-call functions. See appendix \ref{sec:virtualmachineinvocations}.
   \begin{description}
     \item[$\Omega_A$] Assign-core host-call.
     \item[$\Omega_B$] Empower-service host-call.
@@ -124,27 +124,27 @@
 \begin{description}
   \item[$\fnmmrappend(\dots)$] The Merkle mountain range append function. See equation \ref{eq:mmrappend}.
   \item[$\fnoctetstobits\sub{n}(\dots)$] The octets-to-bits function for $n$ octets. Superscripted ${}^{-1}$ to denote the inverse. See equation \ref{eq:bitsfunc}.
-  \item[$\fnerasurecode(\dots)$] The group of erasure-coding functions.
   \item[$\fnerasurecode\sub{n}(\dots)$] The erasure-coding functions for $n$ chunks. See equation \ref{eq:erasurecoding}.
 %  \item[$\mathcal{D}$] Unused.
   \item[$\encode{\dots}$] The octet-sequence encode function. Superscripted ${}^{-1}$ to denote the inverse. See appendix \ref{sec:serialization}.
   \item[$\fnfyshuffle(\dots)$] The Fisher-Yates shuffle function. See equation \ref{eq:suffle}.
   \item[$\blake{\dots}$] The Blake 2b 256-bit hash function. See section \ref{sec:cryptography}.
   \item[$\keccak{\dots}$] The Keccak 256-bit hash function. See section \ref{sec:cryptography}.
-  %  \item[$\mathcal{G}$] Unused.
-  %  \item[$\mathcal{I}$] Unused.
+ 
+ 
   \item[$\fnmerklejustsubpath{x}$] The justification path to a specific $2^x$ size page of a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerklejust}.
   \item[$\keys{\dots}$] The domain, or set of keys, of a dictionary. See section \ref{sec:dictionaries}.
   \item[$\fnmerklesubtreepage{x}$] The $2^x$ size page function for a constant-depth Merkle tree. See equation \ref{eq:constantdepthsubtreemerkleleafpage}.
   \item[$\merklizecd{\dots}$] The constant-depth binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizewb{\dots}$] The well-balanced binary Merklization function. See appendix \ref{sec:merklization}.
   \item[$\merklizestate{\dots}$] The state Merklization function. See appendix \ref{sec:statemerklization}.
-  %  \item[$\mathcal{N}$] Unused.
+ 
   \item[$\getringroot{\dots}$] The Bandersnatch ring root function. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \item[$\zeropad{n}{\dots}$] The octet-array zero-padding function. See equation \ref{eq:zeropadding}.
   \item[$\seqfromhash{}{\dots}$] The numeric-sequence-from-hash function. See equation \ref{eq:sequencefromhash}.
-  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions.
-  \item[$\fnsigndata{k}{\dots}$] The general signature function. See section \ref{sec:cryptography}.
+  \item[$\ecrecover{\dots}$] The group of erasure-coding piece-recovery functions. See equation \ref{eq:erasurecodinginv}.
+  \item[$\edsigndata{k}{\dots}$] The Ed25519 signing function. See section \ref{sec:cryptography}.
+  \item[$\blssigndata{k}{\dots}$] The \textsc{bls} signing function. See section \ref{sec:cryptography}.
   \item[$\wallclock$] The current time expressed in seconds after the start of the \Jam Common Era. See section \ref{sec:commonera}.
   \item[$\subifnone{\dots}$] The substitute-if-nothing function. See equation \ref{eq:substituteifnothing}.
   \item[$\values{\dots}$] The range, or set of values, of a dictionary or sequence. See section \ref{sec:dictionaries}.
@@ -162,16 +162,16 @@ These terms are all contextualized to a single block. They may be superscripted 
   \item[$\ancestors$] The ancestor set of the block. See equation \ref{eq:ancestors}.
   \item[$\block$] The block. See equation \ref{eq:block}.
   \item[$\extrinsic$] The block extrinsic. See equation \ref{eq:extrinsic}.
-  \item[$\beefycommitment{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:beefysignedcommitment}.
+  \item[$\accoutcommitment{v}$] The \textsc{Beefy} signed commitment of validator $v$. See equation \ref{eq:accoutsignedcommitment}.
   \item[$\reporters$] The set of Ed25519 guarantor keys who made a work-report. See equation \ref{eq:guarantorsig}.
   \item[$\header$] The block header. See equation \ref{eq:header}.
-  \item[$\accumulationstatistics$] The sequence of work-reports which were accumulated this in this block. See equation \ref{eq:accumulatedreports}.
+  \item[$\accumulationstatistics$] The sequence of work-reports which were accumulated this in this block. See equations \ref{eq:accumulationstatisticsspec} and \ref{eq:accumulationstatisticsdef}.
   \item[$\guarantorassignments$] The mapping from cores to guarantor keys. See section \ref{sec:coresandvalidators}.
   \item[$\guarantorassignmentsunderlastrotation$] The mapping from cores to guarantor keys for the previous rotation. See section \ref{sec:coresandvalidators}.
   \item[$\justbecameavailable$] The sequence of work-reports which have now become available and ready for accumulation. See equation \ref{eq:availableworkreports}.
   \item[$\isticketed$] The ticketed condition, true if the block was sealed with a ticket signature rather than a fallback. See equations \ref{eq:ticketconditiontrue} and \ref{eq:ticketconditionfalse}.
   \item[$\isaudited$] The audit condition, equal to $\top$ once the block is audited. See section \ref{sec:auditing}.
-  \item[$\deferredtransfersstatistics$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.\\
+  \item[$\deferredtransfersstatistics$] The sequence of transfers implied by the block's accumulations. See equation \ref{eq:deferredtransfers}.
 \end{description}
 
 Without any superscript, the block is assumed to the block being imported or, if no block is being imported, the head of the best chain (see section \ref{sec:bestchain}). Explicit block-contextualizing superscripts include:
@@ -184,126 +184,126 @@ Without any superscript, the block is assumed to the block being imported or, if
 
 Here, the prime annotation indicates posterior state. Individual components may be identified with a letter subscript.
 \begin{description}
-  \item[$\authpool$] The core $\authpool$uthorizations pool. See equation \ref{eq:authstatecomposition}. %	α
-  \item[$\recent$] Log of recent activity. See equation \ref{eq:recenthistory}. %	β
+  \item[$\authpool$] The core $\authpool$uthorizations pool. See equation \ref{eq:authstatecomposition}.
+  \item[$\recent$] Log of recent activity. See equation \ref{eq:recentspec}.
   \begin{description}
-    \item[$\recenthistory$] Information on the most recent blocks.
-    \item[$\beefybelt$] The Merkle mountain belt for accumulating Accumulation outputs.
+    \item[$\recenthistory$] Information on the most recent blocks. See equation \ref{eq:recenthistoryspec}.
+    \item[$\accoutbelt$] The Merkle mountain belt for accumulating Accumulation outputs. See equations \ref{eq:accoutbeltspec} and \ref{eq:accoutbeltdef}.
   \end{description}
-  \item[$\safrole$] State concerning Safrole. See equation \ref{eq:consensusstatecomposition}. %	γ
+  \item[$\safrole$] State concerning Safrole. See equation \ref{eq:consensusstatecomposition}.
   \begin{description}
-    \item[$\ticketaccumulator$] The sealing lottery ticket accumulator.
-    \item[$\pendingset$] The keys for the validators of the next epoch, equivalent to those keys which constitute $\epochroot$.
-    \item[$\sealtickets$] The sealing-key sequence of the current epoch.
-    \item[$\epochroot$] The Bandersnatch root for the current epoch's ticket submissions.
+    \item[$\ticketaccumulator$] The sealing lottery ticket accumulator. See equation \ref{eq:ticketaccumulatorsealticketsspec}.
+    \item[$\pendingset$] The keys for the validators of the next epoch, equivalent to those keys which constitute $\epochroot$. See equation \ref{eq:validatorkeys}.
+    \item[$\sealtickets$] The sealing-key sequence of the current epoch. See equation \ref{eq:ticketaccumulatorsealticketsspec}.
+    \item[$\epochroot$] The Bandersnatch root for the current epoch's ticket submissions. See equation \ref{eq:epochrootspec}.
   \end{description}
-  \item[$\accountspre$] The (prior) state of the service accounts. %	δ
+  \item[$\accountspre$] The (prior) state of the service accounts. See equation \ref{eq:serviceaccounts}.
   \begin{description}
-    \item[$\accountspostacc$] The post-accumulation, pre-transfer intermediate state. %	δ
-    \item[$\accountspostxfer$] The post-transfer, pre-preimage integration intermediate state. %	δ
+    \item[$\accountspostacc$] The post-accumulation, pre-transfer intermediate state. See equation \ref{eq:accountspostaccdef}.
+    \item[$\accountspostxfer$] The post-transfer, pre-preimage integration intermediate state. See equation \ref{eq:accountspostxferdef}.
   \end{description}
-  \item[$\entropy$] The entropy accumulator and epochal randomness. %	η
-  \item[$\stagingset$] The validator keys and metadata to be drawn from next. %	ι
-  \item[$\activeset$] The validator keys and metadata currently active. %	κ
-  \item[$\previousset$] The validator keys and metadata which were active in the prior epoch. %	λ
-  \item[$\reports$] The pending reports, per core, which are being made available prior to accumulation. %	ρ
+  \item[$\entropy$] The entropy accumulator and epochal randomness. See equation \ref{eq:entropycomposition}.
+  \item[$\stagingset$] The validator keys and metadata to be drawn from next. See equation \ref{eq:validatorkeys}.
+  \item[$\activeset$] The validator keys and metadata currently active. See equation \ref{eq:validatorkeys}.
+  \item[$\previousset$] The validator keys and metadata which were active in the prior epoch. See equation \ref{eq:validatorkeys}.
+  \item[$\reports$] The pending reports, per core, which are being made available prior to accumulation. See equation \ref{eq:reportingstate}.
   \begin{description}
-    \item[$\reportspostjudgement$] The post-judgment, pre-guarantees-extrinsic intermediate state. %	δ
-    \item[$\reportspostguarantees$] The post-guarantees-extrinsic, pre-assurances-extrinsic, intermediate state. %	δ
+    \item[$\reportspostjudgement$] The post-judgment, pre-guarantees-extrinsic intermediate state. See equation \ref{eq:removenonpositive}.
+    \item[$\reportspostguarantees$] The post-guarantees-extrinsic, pre-assurances-extrinsic, intermediate state. See equation \ref{eq:reportspostguaranteesdef}.
   \end{description}
-  \item[$\thestate$] The overall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
-  \item[$\thetime$] The most recent block's timeslot. %	τ
-  \item[$\authqueue$] The authorization queue. %	ϕ
-  \item[$\disputes$] Past judgments on work-reports and validators. %	ψ
+  \item[$\thestate$] The overall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}.
+  \item[$\thetime$] The most recent block's timeslot. See equation \ref{eq:timeslotindex}.
+  \item[$\authqueue$] The authorization queue. See equation \ref{eq:authstatecomposition}.
+  \item[$\disputes$] Past judgments on work-reports and validators. See equation \ref{eq:disputesspec}.
   \begin{description}
-    \item[$\badset$] Work-reports judged to be incorrect.
-    \item[$\goodset$] Work-reports judged to be correct.
-    \item[$\wonkyset$] Work-reports whose validity is judged to be unknowable.
-    \item[$\offenders$] Validators who made a judgment found to be incorrect.
+    \item[$\badset$] Work-reports judged to be incorrect. See equation \ref{eq:badsetdef}.
+    \item[$\goodset$] Work-reports judged to be correct. See equation \ref{eq:goodsetdef}.
+    \item[$\wonkyset$] Work-reports whose validity is judged to be unknowable. See equation \ref{eq:wonkysetdef}.
+    \item[$\offenders$] Validators who made a judgment found to be incorrect. See equation \ref{eq:offendersdef}.
   \end{description}
-  \item[$\privileges$] The privileged service indices. %	χ
+  \item[$\privileges$] The privileged service indices. See equation \ref{eq:privilegesspec}.
   \begin{description}
-    \item[$\manager$] The index of the blessed service.
-    \item[$\delegator$] The index of the designate service.
-    \item[$\assigners$] The indices of the services able to assign each core's authorizer queue.
-    \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance.
+    \item[$\manager$] The index of the blessed service. See equation \ref{eq:accountspostaccdef}.
+    \item[$\delegator$] The index of the designate service. See equation \ref{eq:accountspostaccdef}.
+    \item[$\assigners$] The indices of the services able to assign each core's authorizer queue. See equation \ref{eq:accountspostaccdef}.
+    \item[$\alwaysaccers$] The always-accumulate service indices and their basic gas allowance. See equation \ref{eq:accountspostaccdef}.
   \end{description}
-  \item[$\activity$] The activity statistics for the validators. % π
-  \item[$\ready$] The accumulation queue. % ϑ
-  \item[$\accumulated$] The accumulation history. % ξ
-  \item[$\lastaccout$] The most recent Accumulation outputs. See equation \ref{eq:lastaccout}. % θ
+  \item[$\activity$] The activity statistics for the validators. See equation \ref{eq:activityspec}.
+  \item[$\ready$] The accumulation queue. See equation \ref{eq:readyspec}.
+  \item[$\accumulated$] The accumulation history. See equation \ref{eq:accumulatedspec}.
+  \item[$\lastaccout$] The most recent Accumulation outputs. See equations \ref{eq:lastaccoutspec} and \ref{eq:finalstateaccumulation}.
 \end{description}
 
 \subsubsection{Virtual Machine components}
 
 \begin{description}
-  \item[$\varepsilon$] The exit-reason resulting from all machine state transitions. %	ε
-  \item[$\nu$] The immediate values of an instruction. %	ν
-  \item[$\memory$] The memory sequence; a member of the set $\ram$. %	μ
-  \item[$\gascounter$] The gas counter. % ϱ
-  \item[$\registers$] The registers. % ω
-  \item[$\zeta$] The instruction sequence. %	ζ
-  \item[$\varpi$] The sequence of basic blocks of the program. % ϖ
-  \item[$\imath$] The instruction counter. % ı
+  \item[$\varepsilon$] The exit-reason resulting from all machine state transitions.
+  \item[$\nu$] The immediate values of an instruction.
+  \item[$\memory$] The memory sequence; a member of the set $\ram$.
+  \item[$\gascounter$] The gas counter.
+  \item[$\registers$] The registers.
+  \item[$\zeta$] The instruction sequence.
+  \item[$\varpi$] The sequence of basic blocks of the program.
+  \item[$\imath$] The instruction counter.
 \end{description}
 
 \subsubsection{Constants}
 
 \begin{description}
-  \item[$\mathsf{A} = 8$] The period, in seconds, between audit tranches.
-  \item[$\mathsf{B}_I = 10$] The additional minimum balance required per item of elective service state.
-  \item[$\mathsf{B}_L = 1$] The additional minimum balance required per octet of elective service state.
-  \item[$\mathsf{B}_S = 100$] The basic minimum balance which all services require.
-  \item[$\corecount = 341$] The total number of cores.
-  \item[$\mathsf{D} = 19,200$] The period in timeslots after which an unreferenced preimage may be expunged.
-  \item[$\epochlen = 600$] The length of an epoch in timeslots.
-  \item[$\mathsf{F} = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous.
-  \item[$\mathsf{G}_A = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
-  \item[$\mathsf{G}_I = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
-  \item[$\mathsf{G}_R = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
-  \item[$\mathsf{G}_T = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\mathsf{G}_A\cdot\corecount + \sum_{g \in \values{\alwaysaccers}}(g)$.
-  \item[$\mathsf{H} = 8$] The size of recent history, in blocks.
-  \item[$\mathsf{I} = 16$] The maximum amount of work items in a package.
-  \item[$\mathsf{J} = 8$] The maximum sum of dependency items in a work-report.
-  \item[$\mathsf{K} = 16$] The maximum number of tickets which may be submitted in a single extrinsic.
-  \item[$\mathsf{L} = 14,400$] The maximum age in timeslots of the lookup anchor.
-  \item[$\mathsf{N} = 2$] The number of ticket entries per validator.
-  \item[$\mathsf{O} = 8$] The maximum number of items in the authorizations pool.
-  \item[$\mathsf{P} = 6$] The slot period, in seconds.
-  \item[$\mathsf{Q} = 80$] The number of items in the authorizations queue.
-  \item[$\mathsf{R} = 10$] The rotation period of validator-core assignments, in timeslots.
-  \item[$\mathsf{T} = 128$] The maximum number of extrinsics in a work-package.
-  \item[$\mathsf{U} = 5$] The period in timeslots after which reported but unavailable work may be replaced.
-  \item[$\valcount = 1023$] The total number of validators.
-  \item[$\mathsf{W}_A = 64,000$] The maximum size of is-authorized code in octets.
-  \item[$\mathsf{W}_B = 13,794,305$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets.
-  \item[$\mathsf{W}_C = 4,000,000$] The maximum size of service code in octets.
-  \item[$\mathsf{W}_E = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
-  \item[$\mathsf{W}_G = \mathsf{W}_P\mathsf{W}_E = 4104$] The size of a segment in octets.
-  \item[$\mathsf{W}_M = 3,072$] The maximum number of imports in a work-package.
-  \item[$\mathsf{W}_P = 6$] The number of erasure-coded pieces in a segment.
-  \item[$\mathsf{W}_R = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets.
-  \item[$\mathsf{W}_T = 128$] The size of a transfer memo in octets.
-  \item[$\mathsf{W}_X = 3,072$] The maximum number of exports in a work-package.
+  \item[$\Ctrancheseconds = 8$] The period, in seconds, between audit tranches. See section \ref{sec:auditselection}.
+  \item[$\Citemdeposit = 10$] The additional minimum balance required per item of elective service state. See equation \ref{eq:deposits}.
+  \item[$\Cbytedeposit = 1$] The additional minimum balance required per octet of elective service state. See equation \ref{eq:deposits}.
+  \item[$\Cbasedeposit = 100$] The basic minimum balance which all services require. See equation \ref{eq:deposits}.
+  \item[$\Ccorecount = 341$] The total number of cores.
+  \item[$\Cexpungeperiod = 19,200$] The period in timeslots after which an unreferenced preimage may be expunged. See \texttt{eject} definition in section \ref{sec:accumulatefunctions}.
+  \item[$\Cepochlen = 600$] The length of an epoch in timeslots. See section \ref{sec:epochsandslots}.
+  \item[$\Cauditbiasfactor = 2$] The audit bias factor, the expected number of additional validators who will audit a work-report in the following tranche for each no-show in the previous. See equation \ref{eq:latertranches}.
+  \item[$\Creportaccgas = 10,000,000$] The gas allocated to invoke a work-report's Accumulation logic.
+  \item[$\Cpackageauthgas = 50,000,000$] The gas allocated to invoke a work-package's Is-Authorized logic.
+  \item[$\Cpackagerefgas = 5,000,000,000$] The gas allocated to invoke a work-package's Refine logic.
+  \item[$\Cblockaccgas = 3,500,000,000$] The total gas allocated across for all Accumulation. Should be no smaller than $\Creportaccgas\cdot\Ccorecount + \sum_{g \in \values{\alwaysaccers}}(g)$.
+  \item[$\Crecenthistorylen = 8$] The size of recent history, in blocks. See equation \ref{eq:recenthistorydef}.
+  \item[$\Cmaxpackageitems = 16$] The maximum amount of work items in a package. See equations \ref{eq:workreport} and \ref{eq:workpackage}.
+  \item[$\Cmaxreportdeps = 8$] The maximum sum of dependency items in a work-report. See equation \ref{eq:limitreportdeps}.
+  \item[$\Cmaxblocktickets = 16$] The maximum number of tickets which may be submitted in a single extrinsic. See equation \ref{eq:enforceticketlimit}.
+  \item[$\Cmaxlookupanchorage = 14,400$] The maximum age in timeslots of the lookup anchor. See equation \ref{eq:limitlookupanchorage}.
+  \item[$\Cticketentries = 2$] The number of ticket entries per validator. See equation \ref{eq:ticketsextrinsic}.
+  \item[$\Cauthpoolsize = 8$] The maximum number of items in the authorizations pool. See equation \ref{eq:authstatecomposition}.
+  \item[$\Cslotseconds = 6$] The slot period, in seconds. See equation \ref{sec:epochsandslots}.
+  \item[$\Cauthqueuesize = 80$] The number of items in the authorizations queue. See equation \ref{eq:authstatecomposition}.
+  \item[$\Crotationperiod = 10$] The rotation period of validator-core assignments, in timeslots. See sections \ref{sec:coresandvalidators} and \ref{sec:workreportguarantees}.
+  \item[$\Cmaxpackagexts = 128$] The maximum number of extrinsics in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
+  \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work may be replaced. See equation \ref{eq:reportspostguaranteesdef}.
+  \item[$\Cvalcount = 1023$] The total number of validators.
+  \item[$\Cmaxauthcodesize = 64,000$] The maximum size of is-authorized code in octets. See equation \ref{eq:isauthinvocation}.
+  \item[$\Cmaxbundlesize = 13,794,305$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets. See equation \ref{eq:checkextractsize}.
+  \item[$\Cmaxservicecodesize = 4,000,000$] The maximum size of service code in octets. See equations \ref{eq:refinvocation}, \ref{eq:accinvocation} \& \ref{eq:onxferinvocation}.
+  \item[$\Cecpiecesize = 684$] The basic size of erasure-coded pieces in octets. See equation \ref{eq:erasurecoding}.
+  \item[$\Csegmentsize = \Csegmentecpieces\Cecpiecesize = 4104$] The size of a segment in octets. See equation \ref{sec:segments}.
+  \item[$\Cmaxpackageimports = 3,072$] The maximum number of imports in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
+  \item[$\Csegmentecpieces = 6$] The number of erasure-coded pieces in a segment.
+  \item[$\Cmaxreportvarsize = 48\cdot2^{10}$] The maximum total size of all unbounded blobs in a work-report, in octets. See equation \ref{eq:limitworkreportsize}.
+  \item[$\Cmemosize = 128$] The size of a transfer memo in octets. See equation \ref{eq:defxfer}.
+  \item[$\Cmaxpackageexports = 3,072$] The maximum number of exports in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
   \item[$\mathsf{X}$] Context strings, see below.
-  \item[$\mathsf{Y} = 500$] The number of slots into an epoch at which ticket-submission ends.
-  \item[$\mathsf{Z}_A = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
-  \item[$\mathsf{Z}_I = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
-  \item[$\mathsf{Z}_P = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
-  \item[$\mathsf{Z}_Z = 2^{16}$] The standard \textsc{pvm} program initialization zone size. See section \ref{sec:standardprograminit}.
+  \item[$\Cepochtailstart = 500$] The number of slots into an epoch at which ticket-submission ends. See sections \ref{sec:slotkeysequence}, \ref{sec:epochmarker} and \ref{sec:safrolextandtickets}.
+  \item[$\Cpvmdynaddralign = 2$] The \textsc{pvm} dynamic address alignment factor. See equation \ref{eq:jumptablealignment}.
+  \item[$\Cpvminitinputsize = 2^{24}$] The standard \textsc{pvm} program initialization input data size. See equation \ref{sec:standardprograminit}.
+  \item[$\Cpvmpagesize = 2^{12}$] The \textsc{pvm} memory page size. See equation \ref{eq:pvmmemory}.
+  \item[$\Cpvminitzonesize = 2^{16}$] The standard \textsc{pvm} program initialization zone size. See section \ref{sec:standardprograminit}.
 \end{description}
 
 \subsubsection{Signing Contexts}
 
 \begin{description}
-  \item[$\mathsf{X}_A = \token{\$jam\_available}$] \emph{Ed25519} Availability assurances.
-  \item[$\mathsf{X}_B = \token{\$jam\_beefy}$] \emph{\textsc{bls}} Accumulate-result-root-\textsc{mmr} commitment.
-  \item[$\mathsf{X}_E = \token{\$jam\_entropy}$] On-chain entropy generation.
-  \item[$\mathsf{X}_F = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal.
-  \item[$\mathsf{X}_G = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements.
-  \item[$\mathsf{X}_I = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements.
-  \item[$\mathsf{X}_T = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal.
-  \item[$\mathsf{X}_U = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy.
-  \item[$\mathsf{X}_\top = \token{\$jam\_valid}$] \emph{Ed25519} Judgments for valid work-reports.
-  \item[$\mathsf{X}_\bot = \token{\$jam\_invalid}$] \emph{Ed25519} Judgments for invalid work-reports.
+  \item[$\Xavailable = \token{\$jam\_available}$] \emph{Ed25519} Availability assurances. See equation \ref{eq:assurancesig}.
+  \item[$\Xbeefy = \token{\$jam\_beefy}$] \emph{\textsc{bls}} Accumulate-result-root-\textsc{mmr} commitment. See equation \ref{eq:accoutsignedcommitment}.
+  \item[$\Xentropy = \token{\$jam\_entropy}$] On-chain entropy generation. See equation \ref{eq:vrfsigcheck}.
+  \item[$\Xfallback = \token{\$jam\_fallback\_seal}$] \emph{Bandersnatch} Fallback block seal. See equation \ref{eq:ticketconditionfalse}.
+  \item[$\Xguarantee = \token{\$jam\_guarantee}$] \emph{Ed25519} Guarantee statements. See equation \ref{eq:guarantorsig}.
+  \item[$\Xannounce = \token{\$jam\_announce}$] \emph{Ed25519} Audit announcement statements. See equation \ref{eq:announcement}.
+  \item[$\Xticket = \token{\$jam\_ticket\_seal}$] \emph{Bandersnatch Ring\textsc{vrf}} Ticket generation and regular block seal. See equation \ref{eq:ticketconditiontrue}.
+  \item[$\Xaudit = \token{\$jam\_audit}$] \emph{Bandersnatch} Audit selection entropy. See equations \ref{eq:initialaudit} and \ref{eq:latertranches}.
+  \item[$\Xvalid = \token{\$jam\_valid}$] \emph{Ed25519} Judgments for valid work-reports. See equation \ref{eq:judgments}.
+  \item[$\Xinvalid = \token{\$jam\_invalid}$] \emph{Ed25519} Judgments for invalid work-reports. See equation \ref{eq:judgments}.
 \end{description}
